# hotel-reservation

./: .gitignore  Dockerfile  Dockerfile.example  Makefile  README.rst  docker-compose.example.yml  docker-compose.yml  pyproject.toml
checking/: admin.py
checking/models/: checking.py
core/: settings.py  urls.py
customer/: admin.py  models.py
reservation/: admin.py
reservation/models/: reservation.py
room/: admin.py
room/models/: room.py  room_category.py
