[tool.poetry]
name = "hotel-reservation"
version = "0.1.0"
description = ""
authors = ["delsananthony <delsan.anthony.das@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "4.0"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.9"
colorlog = "^6.8.0"
black = "^23.12.1"
pylint = "^3.0.3"
pylint-django = "^2.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
